[package]
name = "p2p_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33", features = ["full"] }
async-trait = "0.1"
env_logger = "0.10.0"
futures = "0.3.28"
libp2p = { version = "0.52.4", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"]  }
